[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/UI_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Menu/Titles/titleMusic.png" type="Texture" id=3]
[ext_resource path="res://Menu/Titles/titleSFX.png" type="Texture" id=4]
[ext_resource path="res://Menu/Titles/titleMaster.png" type="Texture" id=5]
[ext_resource path="res://Menu/Titles/titleFullscreen.png" type="Texture" id=6]

[node name="OptionsMenu" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
script = ExtResource( 1 )

[node name="MasterLabel" type="TextureRect" parent="."]
margin_top = 57.0
margin_right = 429.0
margin_bottom = 120.0
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="MasterSlider" type="HSlider" parent="."]
margin_left = 433.0
margin_right = 1280.0
margin_bottom = 177.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicLabel" type="TextureRect" parent="."]
margin_top = 238.0
margin_right = 429.0
margin_bottom = 301.0
size_flags_vertical = 4
texture = ExtResource( 3 )

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 433.0
margin_top = 181.0
margin_right = 1280.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="TextureRect" parent="."]
margin_top = 419.0
margin_right = 429.0
margin_bottom = 482.0
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="SFXSlider" type="HSlider" parent="."]
margin_left = 433.0
margin_top = 362.0
margin_right = 1280.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
max_value = 1.0
step = 0.05
value = 1.0

[node name="FullscreenLabel" type="TextureRect" parent="."]
margin_top = 600.0
margin_right = 429.0
margin_bottom = 663.0
size_flags_vertical = 4
texture = ExtResource( 6 )

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 754.0
margin_top = 543.0
margin_right = 958.0
margin_bottom = 720.0
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource( 2 )

[connection signal="drag_started" from="MasterSlider" to="." method="_on_MasterSlider_drag_started"]
[connection signal="value_changed" from="MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="drag_started" from="MusicSlider" to="." method="_on_MusicSlider_drag_started"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="drag_started" from="SFXSlider" to="." method="_on_SFXSlider_drag_started"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
